@@ -1,3 +1,12 @@
+2004-02-22  Wakaba  <wakaba@suika.fam.cx>
+
+	* QName.pm (__check_name): Use NodeTree module instead of obsolete
+	XML module.
+	(EMPTY_PFX, ZERO_PFX): New constant functions.
+
+	* NodeTree.pm (resolve_relative_uri): Qualify internal method by
+	namespace name.
+
 2003-12-31  Wakaba  <wakaba@suika.fam.cx>
 
 	* QName.pm (prefix_to_name): Don't call prefix2name w/ parent node's
